--- a/index.html
+++ b/index.html
@@ -1,20 +1,64 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MOGO</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Montserrat:wght@200;600&display=swap" rel="stylesheet">
-  
+    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat:400,700&amp;subset=cyrillic-ext" rel="stylesheet">
+    <title>Mogo</title>
 </head>
 <body>
-<div class="intro" scr="/img/intro.svg">
+
+
+<header class="header">
     <div class="container">
-        <h1>Mogo</h1>
+        <div class="header_inner">
+            <div class="logo">MoGo</div>
+
+            <nav class="nav">
+                <a class="nav_link active" href="#">About</a>
+                <a class="nav_link" href="#">Service</a>
+                <a class="nav_link" href="#">Blog</a>
+                <a class="nav_link" href="#">Work</a>
+                <a class="nav_link" href="#">Contact</a>
+            </nav>
+        </div>
+    </div>
+</header>
+
+
+<div class="intro">
+    <div class="container">
+        <div class="intro_inner">
+            <h2 class="intro_suptitle">Creative Template</h2>
+            <h1 class="intro_title">Welcome to MoGo</h1>
+            <div class="palocka"></div>
+            <a class="btn" href="#">Learn More</a>
+        </div>
+        <div class="slider">
+            <div class="container">
+                <div class="slider_inner">
+                    <div class="slider_item active">
+                        <span class="slider_num">01</span>
+                        Intro
+                    </div>
+                    <div class="slider_item">
+                        <span class="slider_num">02</span>
+                        Work
+                    </div>
+                    <div class="slider_item">
+                        <span class="slider_num">03</span>
+                        About
+                    </div>
+                    <div class="slider_item">
+                        <span class="slide__num">04</span>
+                        Contacts
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
+
+
 </body>
 </html>
