About_item, statistics, services

--- a/index.html
+++ b/index.html
@@ -59,6 +59,136 @@
     </div>
 </div>
 
+<section class="section">
+
+    <div class="container">
+        <div class="section_header">
+            <h3 class="section_suptitle">What we do</h3>
+            <h2 class="section_title">Story about us</h2>
+            <div class="palocka_2"></div>
+            <div class="section_text">
+                <p>Unfortunately, About Us pages are often treated as an obligation rather than an opportunity to build trust, tell your story, and share what makes you, you.</p>
+            </div>
+        </div>
+    <div class="about">
+        <div class="about_item">
+            <div class="about_image">
+                <img src="img/image_1.svg">
+            </div>
+            <div class="about_text">Super team</div>
+        </div>
+        
+        <div class="about_item">
+            <div class="about_image">
+                <img src="img/image_2.svg">
+            </div>
+            <div class="about_text">Love everywhere</div>
+        </div>
+
+        <div class="about_item">
+            <div class="about_image">
+                <img src="img/image_3.svg">
+            </div>
+            <div class="about_text">I love You</div>
+        </div>
+    </div>
+    </div>
+    
+</section>
+
+<div class="statistics">
+    <div class="container">
+        <div class="stat">
+            <div class="stat_item">
+                <div class="stat_count">42</div>
+                <div class="stat_text">web design projects</div>
+            </div>
+            <div class="stat_item">
+                <div class="stat_count">123</div>
+                <div class="stat_text">happy client</div>
+            </div>
+            <div class="stat_item">
+                <div class="stat_count">15</div>
+                <div class="stat_text">award winner</div>
+            </div>
+            <div class="stat_item">
+                <div class="stat_count">99</div>
+                <div class="stat_text">cup of coffee</div>
+            </div>
+            <div class="stat_item">
+                <div class="stat_count">24</div>
+                <div class="stat_text">members</div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<section class="section"> 
+
+    <div class="container">
+        <div class="section_header">
+            <h3 class="section_suptitle">We work with</h3>
+            <h2 class="section_title">Amazing services</h2>
+            <div class="palocka_2"></div>
+        </div>
+
+        <div class="services">
+            <div class="services_item">
+                <img class="services_icon" src="img/services_1.svg">
+                <div class="services_title">Photography</div>
+                <div class="services_text">From grammar and spelling to style and tone, Grammarly’s suggestions are comprehensive</div>
+            </div>
+
+            <div class="services_item">
+                <img class="services_icon" src="img/services_2.svg">
+                <div class="services_title">Web Disign</div>
+                <div class="services_text">From grammar and spelling to style and tone, Grammarly’s suggestions are comprehensive</div>
+            </div>
+
+            <div class="services_item">
+                <img class="services_icon" src="img/services_3.svg">
+                <div class="services_title">Creativity</div>
+                <div class="services_text">From grammar and spelling to style and tone, Grammarly’s suggestions are comprehensive</div>
+            </div>
+        </div>
+
+        <hr>
+
+        <div class="services">
+            <div class="services_item">
+                <img class="services_icon" src="img/services_4.svg">
+                <div class="services_title">Seo</div>
+                <div class="services_text">From grammar and spelling to style and tone, Grammarly’s suggestions are comprehensive</div>
+            </div>
+
+            <div class="services_item">
+                <img class="services_icon" src="img/services_5.svg">
+                <div class="services_title">CSS/HTML</div>
+                <div class="services_text">From grammar and spelling to style and tone, Grammarly’s suggestions are comprehensive</div>
+            </div>
+
+            <div class="services_item">
+                <img class="services_icon" src="img/services_6.svg">
+                <div class="services_title">Digital</div>
+                <div class="services_text">From grammar and spelling to style and tone, Grammarly’s suggestions are comprehensive</div>
+            </div>
+        </div>
+
+    </div>
+
+</section>
+
+<section class="section">
+
+    <div class="container">
+        <div class="section_header">
+            <h3 class="section_suptitle">For all devices</h3>
+            <h2 class="section_title">Unique design</h2>
+            <div class="palocka_2"></div>
+        </div>
+    </div>
+
+</section>
 
 </body>
 </html>
