Services, Devices, Accordion, Reviews

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
 </section>
 
-<section class="section">
+<section class="section section--devices">
 
     <div class="container">
         <div class="section_header">
@@ -186,9 +186,101 @@
             <h2 class="section_title">Unique design</h2>
             <div class="palocka_2"></div>
         </div>
+
+        <div class="devices">
+            <img class="devices_item" src="img/tablet.svg">
+            <img class="devices_item devices_item--phone" src="img/telephone.svg">
+        </div>
+        
     </div>
 
 </section>
+
+<section class="section">
+    <div class="container">
+
+        <div class="section_header">
+            <h3 class="section_suptitle">Service</h3>
+            <h2 class="section_title">What we do</h2>
+            <div class="palocka_2"></div>
+            <div class="section_text">
+                <p>Unfortunately, About Us pages are often treated as an obligation rather than an opportunity to build trust, tell your story, and share what makes you, you.</p>
+            </div>
+        </div>
+
+        <div class="wedo">
+            <div class="wedo_item">
+                <img src="img/human.svg">
+            </div>
+
+            <div class="wedo_item">
+                <div class="accordion">
+                    <div class="accordion_item">
+                        <div class="accordion_header">
+                            <img class="accordion_icon" src="img/picture.svg">
+                            <div class="accordion_title">Photography</div>
+                        </div>
+                        <div class="accordion_content">
+                            <p>
+                                Equal rights and opportunities between men and women and the objective of ensuring active participation of women in all areas of national endeavour are priority tasks.
+                                From grammar and spelling to style and tone, Grammarly’s suggestions are comprehensive
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="accordion_item active">
+                        <div class="accordion_header">
+                            <img class="accordion_icon" src="img/palocki.svg">
+                            <div class="accordion_title">Creativity</div>
+                        </div>
+                        <div class="accordion_content">
+                            <p>
+                                Equal rights and opportunities between men and women and the objective of ensuring active participation of women in all areas of national endeavour are priority tasks.
+                                From grammar and spelling to style and tone, Grammarly’s suggestions are comprehensive
+                            </p>
+                        </div>
+                    </div>
+                    
+                    <div class="accordion_item">
+                        <div class="accordion_header">
+                            <img class="accordion_icon" src="img/circle.svg">
+                            <div class="accordion_title">Web design</div>
+                        </div>
+                        <div class="accordion_content">
+                            <p>
+                                Equal rights and opportunities between men and women and the objective of ensuring active participation of women in all areas of national endeavour are priority tasks.
+                                From grammar and spelling to style and tone, Grammarly’s suggestions are comprehensive
+                            </p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+    </div>
+</section>
+
+<div class="section section--gray">
+    <div class="container">
+
+        <div class="reviews">
+
+            <a class="reviews_btn reviews_btn--prev" href="#">Prev</a>
+            <a class="reviews_btn reviews_btn--next" href="#">Next</a>
+
+            <div class="reviews_item">
+                <img class="reviews_photo" src="http://placehold.it/145">
+                <div class="reviews_text">
+                    Equal rights and opportunities between men and women and the objective of ensuring active participation of women in all areas of national endeavour are priority tasks.
+                    Grammarly’s suggestions are comprehensive
+                </div>
+                <div class="reviews_author">Jon Dog</div>
+            </div>
+        </div>
+
+    </div>
+</div>
 
 </body>
 </html>
