--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/97b7975f88.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat:400,700&amp;subset=cyrillic-ext" rel="stylesheet">
@@ -46,19 +47,19 @@
                 <div class="slider_inner">
                     <div class="slider_item active">
                         <span class="slider_num">01</span>
-                        Intro
+                        <span class="slider_text">Intro</span>
                     </div>
                     <div class="slider_item">
                         <span class="slider_num">02</span>
-                        Work
+                        <span class="slider_text">Work</span>
                     </div>
                     <div class="slider_item">
                         <span class="slider_num">03</span>
-                        About
+                        <span class="slider_text">About</span>
                     </div>
                     <div class="slider_item">
-                        <span class="slide__num">04</span>
-                        Contacts
+                        <span class="slider_num">04</span>
+                        <span class="slider_text">Contacts</span>
                     </div>
                 </div>
             </div>
@@ -67,7 +68,7 @@
 </div>
 
 
-    <!-- Section -->
+    <!-- Section Cards -->
 
 
 <section class="section">
@@ -161,28 +162,24 @@
         <!-- Services -->
 
         <div class="services">
-            <div class="services_item">
+            <div class="services_item services_item--border">
                 <img class="services_icon" src="img/services_1.svg">
                 <div class="services_title">Photography</div>
                 <div class="services_text">From grammar and spelling to style and tone, Grammarly’s suggestions are comprehensive</div>
             </div>
 
-            <div class="services_item">
+            <div class="services_item services_item--border">
                 <img class="services_icon" src="img/services_2.svg">
                 <div class="services_title">Web Disign</div>
                 <div class="services_text">From grammar and spelling to style and tone, Grammarly’s suggestions are comprehensive</div>
             </div>
 
-            <div class="services_item">
+            <div class="services_item services_item--border">
                 <img class="services_icon" src="img/services_3.svg">
                 <div class="services_title">Creativity</div>
                 <div class="services_text">From grammar and spelling to style and tone, Grammarly’s suggestions are comprehensive</div>
             </div>
-        </div>
 
-        <hr>
-
-        <div class="services">
             <div class="services_item">
                 <img class="services_icon" src="img/services_4.svg">
                 <div class="services_title">Seo</div>
@@ -200,9 +197,13 @@
                 <div class="services_title">Digital</div>
                 <div class="services_text">From grammar and spelling to style and tone, Grammarly’s suggestions are comprehensive</div>
             </div>
+
         </div>
 
     </div>
+
+
+    
 
 </section>
 
@@ -250,7 +251,7 @@
 
         <div class="wedo">
             <div class="wedo_item">
-                <img src="img/human.svg">
+                <img class="wedo_img" src="img/human.svg">
             </div>
 
             <div class="wedo_item">
