--- a/index.html
+++ b/index.html
@@ -444,13 +444,29 @@
     <!-- Section--gray -->
 
 
-<div class="section section--gray">
+<div id="section--gray_logos" class="section section--gray">
     <div class="container">
 
         <div class="logos">
             <div class="logos_item">
-                <img src="img/logos.svg">
+                <div class="logos_img"><i class="fab fa-git-square"></i></div>
+            </div>
+            <div class="logos_item">
+                <div class="logos_img"><i class="fab fa-css3-alt"></i></div>
             </div>  
+            <div class="logos_item">
+                <div class="logos_img"><i class="fas fa-code"></i></div>
+            </div>  
+            <div class="logos_item">
+                <div class="logos_img"><i class="fab fa-js"></i></div>
+            </div>  
+            <div class="logos_item">
+                <div class="logos_img"><i class="fab fa-react"></i></div>
+            </div>  
+            <div class="logos_item">
+                <div class="logos_img"><i class="fab fa-angular"></i></div>
+            </div> 
+              
         </div>
 
     </div>
