--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Header -->
 
 
-<header class="header">
+<header class="header" id="header">
     <div class="container">
         <div class="header_inner">
             <div class="logo">MoGo</div>
@@ -25,7 +25,19 @@
                 <a class="nav_link" href="#">Blog</a>
                 <a class="nav_link" href="#">Work</a>
                 <a class="nav_link" href="#">Contact</a>
+                <a class="nav_link" href="#">
+                    <i class="fas fa-shopping-cart"></i>
+                </a>
+                <a class="nav_link" href="#">
+                    <i class="fas fa-search"></i>
+                </a>
+
             </nav>
+
+            <button class="nav-toggle" type="button">
+                <span class="nav-toggle_item">Menu</span>
+            </button>
+
         </div>
     </div>
 </header>
@@ -34,7 +46,7 @@
     <!-- intro -->
 
 
-<div class="intro">
+<div class="intro" id="intro">
     <div class="container">
         <div class="intro_inner">
             <h2 class="intro_suptitle">Creative Template</h2>
@@ -865,6 +877,9 @@
         </div>
     </div>
 </footer>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script scr="js/app.js"></script>
 
 </body>
 </html>
