--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <title>Mogo</title>
+    <link rel="icon" href="img/icon.png" type="image/x-icon">
 </head>
 
 <body>
@@ -364,7 +365,7 @@
                     <div data-slider>
                         <div>
                             <div class="reviews_item">
-                                <img class="reviews_photo" src="http://placehold.it/145">
+                                <img class="reviews_photo" src="img/girl.svg">
                                 <div class="reviews_text">
                                     Equal rights and opportunities between men and women and the objective of ensuring
                                     active
@@ -376,7 +377,7 @@
 
                         <div>
                             <div class="reviews_item">
-                                <img class="reviews_photo" src="http://placehold.it/145">
+                                <img class="reviews_photo" src="img/girl.svg">
                                 <div class="reviews_text">
                                     From grammar and spelling to style and tone, Grammarly’s suggestions are
                                     comprehensive
@@ -951,7 +952,6 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Counter-Up/1.0.0/jquery.counterup.js"></script>
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> -->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script type="text/javascript" src="./js/app.js"></script>
 
